    was incorrectly capitalized.

* Gedcom to GeneWeb (ged2gwb)
  - [May 19, 99] Better catenation of continuation (CONC) notes. In particular
    fixes the bug which sometimes added spaces inside words.

* GeneWeb to Gedcom (gwb2ged)
  - [May 19, 99] Fold notes lines at 255 characters (required by GEDCOM
    standard) adding CONC.

* Documentation
  - [May 13, 99] Updated Swedish documentation (Lars Gustavsson).

GeneWeb Version 2.02
--------------------

* New feature

  - [May 4, 99] Added a new program "setup" which will allow to
    use a lot of commands without having to type magic incantations in a
    MSdos (Windows) or Xterm (Unix) window. Everything is done in the Web
    navigator: creation of a database, extraction of a GEDCOM file, cleanup,
    etc etc.
    Should be convenient for non computer scientists beginners (and even for
    old timers computer scientists who already know GeneWeb).

* General
  - [Apr 22, 99] Added Danish language (by Hans Albeck).

* GeneWeb Daemon/CGI (gwd)
  - [May 6, 99] Fixed bad behavior: in "modify person" form, a person was
    not considered as "buried", if the only area filled was "burial place".
  - [May 4, 99] Added button "include missing spouses" for missing ancestors.
  - [May 4, 99] Suppressed trace log count in CGI mode in not redirected
    in a file (option "-log"). Seemed to be incorrectly displayed in the
    HTML page in Windows.
  - [Apr 30, 99] Fixed another accent problem in displaying in clicking
    a first name for corresponding surnames starting with an accentuated
    letter.
  - [Apr 29, 99] Accept now files in image field ending with ".jpeg" and
    ".JPEG" (accepted before only with ".jpg" and ".JPG").
  - [Apr 29, 99] Fixed bug: when a persons first name, last name and number
    is the same as another person, GeneWeb shows a warning and suggests a new
    number. If the new number is selected, all special signs were
    transformed into codes.