@@ -1,4 +1,4 @@
-(* $Id: def.mli,v 2.5 1999-04-05 23:42:27 ddr Exp $ *)
+(* $Id: def.mli,v 2.6 1999-05-22 21:47:41 ddr Exp $ *)
 (* Copyright (c) 1999 INRIA *)
 
 type iper = Adef.iper;
@@ -141,6 +141,7 @@ type base_func =
     patch_string : istr -> string -> unit;
     patch_name : string -> iper -> unit;
     commit_patches : unit -> unit;
+    patched_families : unit -> list ifam;
     cleanup : unit -> unit }
 ;
 
